--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <button id="new-btn">New Game</button>
     </div>
     <main class="main-div">
-        <button id="toggle-dark" style="font-size: x-large; background-color: #25255c; border: none; color:gold;">
+        <button id="toggle-dark"
+            style="font-size: x-large; background-color: #25255c; border: none; color:gold; margin-top: 0.4rem;">
             <i class="fa-solid fa-toggle-on " style="display: none;  background-color: black;"></i>
             <i class="fa-solid fa-toggle-off "></i>
         </button>
